--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@mui/material": "^7.0.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.8.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.4.1",
