--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
         "@mui/icons-material": "^7.0.1",
         "@mui/material": "^7.0.1",
         "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^13.5.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -20,7 +18,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "vitest",
         "eject": "react-scripts eject",
         "format": "prettier --write ."
     },
@@ -44,9 +42,13 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.23.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
         "eslint": "^8.57.1",
         "eslint-plugin-react": "^7.37.4",
         "globals": "^16.0.0",
-        "prettier": "^3.5.3"
+        "jsdom": "^26.0.0",
+        "prettier": "^3.5.3",
+        "vitest": "^3.1.1"
     }
 }
