--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,22 @@ jobs:
             - name: Run tests
               run: |
                   npm run tests  # Run your tests using Vitest
+    lint:
+        runs-on: ubuntu-latest # Use the latest Ubuntu runner
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2 # Checkout the code from the repository
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2 # Set up Node.js
+              with:
+                  node-version: '16' # Specify the Node.js version you're using (adjust if necessary)
+
+            - name: Install dependencies
+              run: |
+                  npm install  # Install your dependencies
+
+            - name: Run linter
+              run: |
+                  npm run lint  # Run your linter
