--- a/package.json
+++ b/package.json
@@ -20,13 +20,8 @@
         "build": "react-scripts build",
         "test": "vitest",
         "eject": "react-scripts eject",
-        "format": "prettier --write ."
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "format": "prettier --write .",
+        "lint": "eslint ."
     },
     "browserslist": {
         "production": [
@@ -41,11 +36,15 @@
         ]
     },
     "devDependencies": {
-        "@eslint/js": "^9.23.0",
+        "@babel/eslint-parser": "^7.27.0",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-react": "^7.26.3",
+        "@eslint/js": "^9.24.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "eslint": "^8.57.1",
-        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "globals": "^16.0.0",
         "jsdom": "^26.0.0",
         "prettier": "^3.5.3",
