--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
         "@eslint/js": "^9.24.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@vitejs/plugin-react": "^4.4.0",
         "eslint": "^8.57.1",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "globals": "^16.0.0",
-        "jsdom": "^26.0.0",
+        "jsdom": "^26.1.0",
         "prettier": "^3.5.3",
         "vitest": "^3.1.1"
     }
