--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "globals": "^16.0.0",
+        "jest": "^27.5.1",
         "jsdom": "^26.1.0",
         "prettier": "^3.5.3",
         "vitest": "^3.1.1"
