--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^7.0.1",
-        "@mui/material": "^7.0.1",
+        "@mui/material": "^7.1.0",
+        "@mui/x-charts": "^8.3.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.8.4",
